[gd_scene load_steps=19 format=2]

[ext_resource path="res://imagens/spritesheet_player/arrow_right_icon_133719.png" type="Texture" id=1]
[ext_resource path="res://fontes/PTSansNarrow-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://cenas/Jogador/Jogador.tscn" type="PackedScene" id=3]
[ext_resource path="res://cenas/transicoes/transicao_shaders.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/tutorial/tutorial.gd" type="Script" id=5]
[ext_resource path="res://imagens/tutorial/diamond_sprite/diamond-sh.png" type="Texture" id=6]
[ext_resource path="res://imagens/tutorial/46701.jpg" type="Texture" id=7]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=11]
size = 35
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 513.245, 285.482 )
scale = Vector2( 0.290257, 0.160466 )
texture = ExtResource( 7 )

[node name="Personagem" parent="." instance=ExtResource( 3 )]
position = Vector2( 517, 304 )

[node name="Diamante" type="Area2D" parent="."]
position = Vector2( 512, 544 )
scale = Vector2( 3.6875, 3.6875 )

[node name="Colisao" type="CollisionShape2D" parent="Diamante"]
shape = SubResource( 1 )

[node name="Animação" type="AnimatedSprite" parent="Diamante"]
position = Vector2( -0.271179, 1.62711 )
scale = Vector2( 0.804555, 0.804555 )
frames = SubResource( 10 )
frame = 3
playing = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="dialogo" type="ColorRect" parent="."]
margin_left = -1.0
margin_top = 434.0
margin_right = 1026.0
margin_bottom = 602.0

[node name="texto" type="Label" parent="dialogo"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 24.0
margin_top = 27.0
margin_right = 955.0
margin_bottom = 164.0
custom_fonts/font = SubResource( 11 )
text = "Use as setas (imagens das setas) no canto inferior esquerdo para se movimentar para as direções correspondente."
align = 3
autowrap = true

[node name="diamante2" type="AnimatedSprite" parent="dialogo"]
position = Vector2( 70, -26 )
scale = Vector2( 4.77295, 4.77295 )
frames = SubResource( 10 )
frame = 3
playing = true

[node name="TextureButton" type="TextureButton" parent="dialogo"]
margin_left = 955.0
margin_top = 98.0
margin_right = 1021.0
margin_bottom = 160.0
texture_normal = ExtResource( 1 )
expand = true

[node name="Transition" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Transition2" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Diamante" to="." method="_on_Diamante_body_entered"]
[connection signal="pressed" from="dialogo/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
